--- a/service/landmanage.html
+++ b/service/landmanage.html
@@ -133,7 +133,7 @@
         <div class="container footer-top">
             <div class="row gy-4">
                 <div class="col-lg-4 col-md-4 footer-about">
-                    <a href="index.html" class="logo d-flex align-items-center">
+                    <a href="/index.html" class="logo d-flex align-items-center">
                         <span class="sitename">КАГП</span>
                     </a>
                     <div class="footer-contact pt-3">
@@ -143,32 +143,32 @@
                         <p><strong>Email:</strong> <span>kagp24@mail.ru</span></p>
                     </div>
                     <!--<div class="social-links d-flex mt-4">
-                        <a href=""><i class="bi bi-twitter-x"></i></a>
-                        <a href=""><i class="bi bi-facebook"></i></a>
-                        <a href=""><i class="bi bi-instagram"></i></a>
-                        <a href=""><i class="bi bi-linkedin"></i></a>
-                    </div>-->
+                    <a href=""><i class="bi bi-twitter-x"></i></a>
+                    <a href=""><i class="bi bi-facebook"></i></a>
+                    <a href=""><i class="bi bi-instagram"></i></a>
+                    <a href=""><i class="bi bi-linkedin"></i></a>
+                </div>-->
                 </div>
 
                 <div class="col-lg-4 col-md-4 footer-links">
                     <h4>Ссылки</h4>
                     <ul>
                         <li><a href="/">Главная</a></li>
-                        <li><a href="about.html">О предприятии</a></li>
-                        <li><a href="#services">Деятельность</a></li>
-                        <li><a href="user_agreement.html">Пользовательское соглашение</a></li>
+                        <li><a href="/about.html">О предприятии</a></li>
+                        <li><a href="/services.html">Деятельность</a></li>
+                        <li><a href="/user_agreement.html">Пользовательское соглашение</a></li>
                     </ul>
                 </div>
 
                 <div class="col-lg-4 col-md-4 footer-links">
                     <h4>Услуги</h4>
                     <ul>
-                        <li><a href="service/geodesy.html">Геодезические изыскания</a></li>
-                        <li><a href="service/geology.html">Геологические изыскания</a></li>
-                        <li><a href="service/laboratory.html">Лабораторные работы</a></li>
-                        <li><a href="service/maps.html">Картографические работы</a></li>
-                        <li><a href="service/cadastre.html">Кадастровые работы</a></li>
-                        <li><a href="service/landmanage.html">Землеустроительные работы</a></li>
+                        <li><a href="/service/geodesy.html">Геодезические изыскания</a></li>
+                        <li><a href="/service/geology.html">Геологические изыскания</a></li>
+                        <li><a href="/service/laboratory.html">Лабораторные работы</a></li>
+                        <li><a href="/service/maps.html">Картографические работы</a></li>
+                        <li><a href="/service/cadastre.html">Кадастровые работы</a></li>
+                        <li><a href="/service/landmanage.html">Землеустроительные работы</a></li>
                     </ul>
                 </div>
             </div>
