--- a/index.html
+++ b/index.html
@@ -650,7 +650,7 @@
         <div class="container footer-top">
             <div class="row gy-4">
                 <div class="col-lg-4 col-md-4 footer-about">
-                    <a href="index.html" class="logo d-flex align-items-center">
+                    <a href="/index.html" class="logo d-flex align-items-center">
                         <span class="sitename">КАГП</span>
                     </a>
                     <div class="footer-contact pt-3">
@@ -660,11 +660,11 @@
                         <p><strong>Email:</strong> <span>kagp24@mail.ru</span></p>
                     </div>
                     <!--<div class="social-links d-flex mt-4">
-                        <a href=""><i class="bi bi-twitter-x"></i></a>
-                        <a href=""><i class="bi bi-facebook"></i></a>
-                        <a href=""><i class="bi bi-instagram"></i></a>
-                        <a href=""><i class="bi bi-linkedin"></i></a>
-                    </div>-->
+                    <a href=""><i class="bi bi-twitter-x"></i></a>
+                    <a href=""><i class="bi bi-facebook"></i></a>
+                    <a href=""><i class="bi bi-instagram"></i></a>
+                    <a href=""><i class="bi bi-linkedin"></i></a>
+                </div>-->
                 </div>
 
                 <div class="col-lg-4 col-md-4 footer-links">
@@ -673,7 +673,6 @@
                         <li><a href="/">Главная</a></li>
                         <li><a href="/about.html">О предприятии</a></li>
                         <li><a href="/services.html">Деятельность</a></li>
-                        <li><a href="/projects.html">Проекты</a></li>
                         <li><a href="/user_agreement.html">Пользовательское соглашение</a></li>
                     </ul>
                 </div>
