--- a/index.html
+++ b/index.html
@@ -321,11 +321,11 @@
 
                         <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-geodezia">
                             <div class="portfolio-content h-100">
-                                <img src="assets/img/portfolio/1.jpg" class="img-fluid" alt="">
+                                <img src="assets/img/portfolio/transoil_east.jpg" class="img-fluid" alt="">
                                 <div class="portfolio-info">
-                                    <h4>Геодезия 1</h4>
+                                    <h4>ООО "Транснефть Восток"</h4>
                                     <p>Lorem ipsum, dolor sit amet consectetur</p>
-                                    <a href="assets/img/portfolio/1.jpg" title="Гедезия 1" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                                    <a href="assets/img/portfolio/transoil_east.jpg" title="Транснефть Восток" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                                     <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                                 </div>
                             </div>
@@ -333,11 +333,11 @@
 
                         <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-gelogy">
                             <div class="portfolio-content h-100">
-                                <img src="assets/img/portfolio/2.jpg" class="img-fluid" alt="">
+                                <img src="assets/img/portfolio/sibvami.jpg" class="img-fluid" alt="">
                                 <div class="portfolio-info">
-                                    <h4>Геология 1</h4>
+                                    <h4>АО «СибВАМИ»  (Русал)</h4>
                                     <p>Lorem ipsum, dolor sit amet consectetur</p>
-                                    <a href="assets/img/portfolio/2.jpg" title="Геология 1" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                                    <a href="assets/img/portfolio/sibvami.jpg" title="СибВАМИ" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                                     <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                                 </div>
                             </div>
@@ -345,11 +345,11 @@
 
                         <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-kadastr">
                             <div class="portfolio-content h-100">
-                                <img src="assets/img/portfolio/3.jpg" class="img-fluid" alt="">
+                                <img src="assets/img/portfolio/esp.jpg" class="img-fluid" alt="">
                                 <div class="portfolio-info">
-                                    <h4>Кадастр 1</h4>
+                                    <h4>ЭЛЕКТРОСЕТЬПРОЕКТ</h4>
                                     <p>Lorem ipsum, dolor sit amet consectetur</p>
-                                    <a href="assets/img/portfolio/3.jpg" title="Кадастр 1" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                                    <a href="assets/img/portfolio/esp.jpg" title="ЭЛЕКТРОСЕТЬПРОЕКТ" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                                     <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                                 </div>
                             </div>
